--- a/style.css
+++ b/style.css
@@ -10,5 +10,8 @@ body {
 
 .grid-container {
     display: flex;
+    flex-grow: 8;
     flex-direction: column;
+    max-height: 960px;
+    max-width: 960px;
 }
